fix overflow & responsive issue for mobile view

--- a/pages/login/Login.module.css
+++ b/pages/login/Login.module.css
@@ -146,3 +146,9 @@
   font-size: 30px;
   color: whitesmoke
 }
+
+@media screen and (max-width: 868px) {
+  .center {
+    background-color: #393053;
+  }
+}
