--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,7 @@ header {
 }
 
 body {
+  overflow-x: hidden;
   min-height: 100vh;
   min-height: -webkit-fill-available;
   background: rgb(57,48,83);
